--- a/yygh-service/pom.xml
+++ b/yygh-service/pom.xml
@@ -19,6 +19,11 @@
     <dependencies>
         <dependency>
             <groupId>com.github.wugenshui</groupId>
+            <artifactId>yygh-common-util</artifactId>
+            <version>${revision}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.wugenshui</groupId>
             <artifactId>yygh-service-util</artifactId>
             <version>${revision}</version>
         </dependency>
